log
Sun, May  4, 2025  1:01:06 AM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
5729e4d
Sun, May  4, 2025  1:01:50 AM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
76cb09e
Sun, May  4, 2025  1:05:27 AM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
712f161
Sun, May  4, 2025  1:09:10 AM: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:53:16: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   53 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
treemap.c:55:16: warning: unused variable 'nuevo' [-Wunused-variable]
   55 |     TreeNode * nuevo = createTreeNode(key, value);
      |                ^~~~~
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
c561e59
Sun, May  4, 2025  1:16:17 AM: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:53:16: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   53 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
treemap.c:57:16: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   57 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
treemap.c:65:16: warning: unused variable 'parent' [-Wunused-variable]
   65 |     TreeNode * parent = NULL;
      |                ^~~~~~
treemap.c:64:16: warning: unused variable 'current' [-Wunused-variable]
   64 |     TreeNode * current = tree->root;
      |                ^~~~~~~
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
e3c32ea
Sun, May  4, 2025  1:22:50 AM: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:53:16: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   53 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
treemap.c:57:16: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   57 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
treemap.c:65:16: warning: variable 'parent' set but not used [-Wunused-but-set-variable]
   65 |     TreeNode * parent = NULL;
      |                ^~~~~~
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
f608168
Sun, May  4, 2025  1:23:45 AM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:53:16: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   53 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
treemap.c:57:16: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   57 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
7e84444
Sun, May  4, 2025  1:24:14 AM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
e4eca4e
Sun, May  4, 2025  1:26:11 AM: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|6
total_score: 5/70
1169b12
Sun, May  4, 2025  1:26:39 AM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|6
total_score: 5/70
c00825f
Sun, May  4, 2025  1:27:12 AM: 
 treemap.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  5|6
total_score: 5/70
b599572
